Fix saving configs which are only a header
By: md_5 <git@md-5.net>